--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,19 @@
 /*
  * Estilos reutilizables
  */
+ /*
+ * Clases reutilizables para el proyecto
+ * (Aquí pueden ir las clases de tu grid)
+ */
+
+.mb-0 {
+  margin-bottom: 0;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
+
+.text-uppercase {
+  text-transform: uppercase;
+}
